# cred

./: .gitignore  Cargo.toml  README.md  check.sh
.github/workflows/: runtest.yml
help/: buffer.md  menu.md
src/: main.rs
src/cred/: common.rs  controls.rs  events.rs  mod.rs  syntax.rs  tests.rs
src/cred/help/: buffer.md  intro.md  openbuffer.md  openfile.md  search.md  selection.md  undoredo.md
