# MIT License
# 
# Copyright (c) 2020 Simon Mihevc
# 
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
# 
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
# 
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name = "cred"
version = "0.4.0"
authors = ["Simon Mihevc <simon.mihevc@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.11"
chrono = "0.4"
rand = "0.7.3" 
regex = "1.3.9"
lazy_static = "1.0.1"
env_logger = "0.7.1"
log4rs = "*"
termbox-sys = { git = "https://github.com/crnkofe/termbox-sys" }
rustbox = { git = "https://github.com/crnkofe/rustbox" }
terminal_size = "0.1.13"
unicode-segmentation = "1.6.0"
clipboard = "0.5.0"
uuid = { version = "0.5.1", features = ["serde", "v4"] }
